Resolves: tdf#129119 no SfxViewFrame in startcenter

Change-Id: I16d8207314146df3dd7f5b11182650066cc97fde